tests/neg-custom-args/captures/reaches.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/reaches.scala:23:11 --------------------------------------
23 |    cur = (() => f.write()) :: Nil  // error
   |           ^^^^^^^^^^^^^^^^^^^^^^^
   |           Found:    List[() ->{f} Unit]
   |           Required: List[() ->{C} Unit]
   |
   |           Note that capability `f` cannot flow into capture set {C}.
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/reaches.scala:34:7 ---------------------------------------
34 |      (() => f.write()) :: Nil // error
   |       ^^^^^^^^^^^^^^^^^^^^^^^
   |       Found:    List[() ->{f} Unit]
   |       Required: List[() ->{C} Unit]^{}
   |
   |       Note that capability `f` cannot flow into capture set {C} of value cur.
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/reaches.scala:54:27 --------------------------------------
54 |  val id: Id[Proc, Proc] = new Id[Proc, () -> Unit] // error
   |                           ^^^^^^^^^^^^^^^^^^^^^^^^
   |                           Found:    Id[() ->{any} Unit, () -> Unit]^'s1
   |                           Required: Id[() ->{any²} Unit, () => Unit]
   |
   |                           Note that capability `any²` cannot flow into capture set {any}
   |                           because any² is not visible from any in value id.
   |
   |                           where:    =>   refers to a root capability in the type of value id
   |                                     any  is a root capability created in value id
   |                                     any² is the root capability caps.any
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/reaches.scala:59:32 --------------------------------------
59 |  val id: File^ -> File^ = x => x // error
   |                                ^
   |Found:    (x : File^)
   |Required: File^{any}
   |
   |Note that capability `x` cannot flow into capture set {any}
   |because (x : File^) in an enclosing function is not visible from any in value id.
   |
   |where:    ^   refers to a root capability created in anonymous function of type (x²: File^²): File^² of parameter parameter x of method $anonfun
   |          any is a root capability in the type of value id
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/reaches.scala:71:27 --------------------------------------
71 |    val f1: File^{id*} = id(f)   // error
   |                         ^^^^^
   |Found:    File^{any}
   |Required: File^{id*}
   |
   |Note that capability `any` cannot flow into capture set {id*}.
   |
   |where:    any is a root capability created in value f1 when instantiating function value id's type (x: File^): File^{fresh}
   |
   | longer explanation available when compiling with `-explain`
